# amplifier-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
agents/: bug-hunter.md  explorer.md  git-ops.md  modular-builder.md  security-guardian.md  zen-architect.md
amplifier-agent-foundation/: Cargo.toml  README.md
amplifier-agent-foundation/src/: lib.rs
crates/amplifier-context-foundation/: Cargo.toml
crates/amplifier-context-foundation/context/: delegation-instructions.md  multi-agent-patterns.md
crates/amplifier-context-foundation/src/: lib.rs
crates/amplifier-module-agent-runtime/: Cargo.toml  README.md
crates/amplifier-module-agent-runtime/src/: lib.rs
crates/amplifier-module-context-simple/: Cargo.toml  README.md
crates/amplifier-module-context-simple/src/: lib.rs
crates/amplifier-module-hooks-routing/: Cargo.toml
crates/amplifier-module-hooks-routing/tests/: integration_test.rs
crates/amplifier-module-hooks-status-context/: Cargo.toml
crates/amplifier-module-hooks-status-context/src/: lib.rs
crates/amplifier-module-orchestrator-loop-streaming/: Cargo.toml  README.md
crates/amplifier-module-orchestrator-loop-streaming/src/: hooks.rs  lib.rs
crates/amplifier-module-orchestrator-loop-streaming/tests/: integration_test.rs
crates/amplifier-module-provider-anthropic/: Cargo.toml  README.md
crates/amplifier-module-provider-anthropic/src/: lib.rs  streaming.rs
crates/amplifier-module-provider-anthropic/tests/: integration_test.rs
crates/amplifier-module-provider-gemini/: Cargo.toml  README.md
crates/amplifier-module-provider-gemini/src/: lib.rs  types.rs
crates/amplifier-module-provider-gemini/tests/: integration_test.rs
crates/amplifier-module-provider-ollama/: Cargo.toml  README.md
crates/amplifier-module-provider-ollama/src/: lib.rs
crates/amplifier-module-provider-ollama/tests/: integration_test.rs
crates/amplifier-module-provider-openai/: Cargo.toml  README.md
crates/amplifier-module-provider-openai/src/: lib.rs  responses.rs
crates/amplifier-module-provider-openai/tests/: integration_test.rs
crates/amplifier-module-session-store/: Cargo.toml  README.md
crates/amplifier-module-session-store/src/: file.rs  format.rs  lib.rs
crates/amplifier-module-session-store/tests/: integration_test.rs
crates/amplifier-module-tool-bash/: Cargo.toml  README.md
crates/amplifier-module-tool-bash/src/: lib.rs  profiles.rs
crates/amplifier-module-tool-bash/tests/: integration_test.rs
crates/amplifier-module-tool-delegate/: Cargo.toml  README.md
crates/amplifier-module-tool-delegate/src/: context.rs  lib.rs  resolver.rs
crates/amplifier-module-tool-filesystem/: Cargo.toml  README.md
crates/amplifier-module-tool-filesystem/src/: glob_tool.rs  grep_tool.rs  lib.rs  read.rs  write.rs
crates/amplifier-module-tool-filesystem/tests/: integration_test.rs
crates/amplifier-module-tool-search/: Cargo.toml  README.md
crates/amplifier-module-tool-search/src/: glob.rs  lib.rs  ripgrep.rs
crates/amplifier-module-tool-search/tests/: integration_test.rs
crates/amplifier-module-tool-skills/: Cargo.toml  README.md
crates/amplifier-module-tool-skills/src/: lib.rs  parser.rs
crates/amplifier-module-tool-task/: Cargo.toml  README.md
crates/amplifier-module-tool-task/src/: lib.rs
crates/amplifier-module-tool-todo/: Cargo.toml  README.md
crates/amplifier-module-tool-todo/src/: lib.rs
crates/amplifier-module-tool-todo/tests/: integration_test.rs
crates/amplifier-module-tool-web/: Cargo.toml  README.md
crates/amplifier-module-tool-web/src/: fetch.rs  lib.rs  search.rs
crates/amplifier-module-tool-web/tests/: integration_test.rs
sandbox/amplifier-android-sandbox/: Cargo.toml
sandbox/amplifier-android-sandbox/src/: hooks.rs  main.rs  sandbox.rs  tools.rs
sandbox/amplifier-android-sandbox/tests/: e2e_test.rs
scripts/: check-pub-api.sh  dryrun-all.sh
