[workspace]
resolver = "2"
members = [
    "crates/amplifier-module-context-simple",
    "crates/amplifier-module-orchestrator-loop-streaming",
    "crates/amplifier-module-provider-anthropic",
    "crates/amplifier-module-tool-task",
    "crates/amplifier-module-tool-skills",
]

[workspace.dependencies]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tiktoken-rs = "0.5"
serde_yaml = "0.9"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
