[workspace]
resolver = "2"
members = [
    "crates/amplifier-module-context-simple",
    "crates/amplifier-module-orchestrator-loop-streaming",
    "crates/amplifier-module-provider-anthropic",
    "crates/amplifier-module-tool-task",
    "crates/amplifier-module-tool-skills",
    "crates/amplifier-module-provider-gemini",
    "crates/amplifier-module-provider-openai",
    "crates/amplifier-module-provider-ollama",
    "crates/amplifier-module-tool-web",
    "crates/amplifier-module-tool-todo",
    "crates/amplifier-module-tool-filesystem",
    "crates/amplifier-module-tool-bash",
    "crates/amplifier-module-tool-search",
    "sandbox/amplifier-android-sandbox",
    "crates/amplifier-module-agent-runtime",
    "crates/amplifier-module-tool-delegate",
    "crates/amplifier-module-session-store",
    "amplifier-agent-foundation",
]

[workspace.dependencies]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tiktoken-rs = "0.5"
serde_yaml = "0.9"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
amplifier-module-agent-runtime = { path = "crates/amplifier-module-agent-runtime" }
amplifier-agent-foundation = { path = "amplifier-agent-foundation" }
