[package]
name = "amplifier-agent-foundation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Foundation agent definitions (system prompts and tool bundles) for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "foundation", "prompt"]
categories = ["asynchronous"]
documentation = "https://docs.rs/amplifier-agent-foundation"

[dependencies]
amplifier-module-agent-runtime = { workspace = true }
