[package]
name = "amplifier-module-agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Agent definition loader and runtime registry for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "runtime", "registry"]
categories = ["asynchronous", "config"]
documentation = "https://docs.rs/amplifier-module-agent-runtime"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
