[package]
name = "amplifier-module-context-simple"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Simple context-window manager with tiktoken-based truncation for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "llm", "agent", "context"]
categories = ["asynchronous", "api-bindings"]
documentation = "https://docs.rs/amplifier-module-context-simple"

[dependencies]
amplifier-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tiktoken-rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
