[package]
name = "amplifier-module-orchestrator-loop-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
amplifier-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
