[package]
name = "amplifier-module-orchestrator-loop-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
amplifier-core = { workspace = true }
amplifier-module-context-simple = { path = "../amplifier-module-context-simple" }
amplifier-module-tool-task = { path = "../amplifier-module-tool-task" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
