[package]
name = "amplifier-module-provider-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Anthropic Messages API provider (Claude models) for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "anthropic", "claude", "llm"]
categories = ["api-bindings", "asynchronous"]
documentation = "https://docs.rs/amplifier-module-provider-anthropic"

[dependencies]
amplifier-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
