[package]
name = "amplifier-module-provider-ollama"
version = "0.1.0"
edition = "2021"
description = "Ollama/ChatCompletions-compatible provider for the amplifier-rust workspace"

[dependencies]
amplifier-core = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
