[package]
name = "amplifier-module-provider-ollama"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ollama / OpenAI-compatible ChatCompletions provider for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "ollama", "local", "llm"]
categories = ["api-bindings", "asynchronous"]
documentation = "https://docs.rs/amplifier-module-provider-ollama"

[dependencies]
amplifier-core = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
