[package]
name = "amplifier-module-provider-openai"
version = "0.1.0"
edition = "2021"
description = "OpenAI Responses API provider for the amplifier-rust workspace"

[dependencies]
amplifier-core = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
