[package]
name = "amplifier-module-session-store"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
