[package]
name = "amplifier-module-session-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Persistent session storage with vault-rooted JSON serialization for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "session", "storage"]
categories = ["filesystem", "asynchronous"]
documentation = "https://docs.rs/amplifier-module-session-store"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
