[package]
name = "amplifier-module-tool-bash"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Sandboxed bash command execution tool for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "tool", "bash"]
categories = ["command-line-utilities", "asynchronous"]
documentation = "https://docs.rs/amplifier-module-tool-bash"

[dependencies]
amplifier-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
