[package]
name = "amplifier-module-tool-delegate"
version = "0.1.0"
edition = "2021"

[dependencies]
amplifier-core = { workspace = true }
amplifier-module-tool-task = { path = "../amplifier-module-tool-task" }
amplifier-module-agent-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
