[package]
name = "amplifier-module-tool-delegate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Hierarchical agent delegation tool with context inheritance for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "tool", "delegate"]
categories = ["asynchronous"]
documentation = "https://docs.rs/amplifier-module-tool-delegate"

[dependencies]
amplifier-core = { workspace = true }
amplifier-module-tool-task = { path = "../amplifier-module-tool-task", version = "0.1.0" }
amplifier-module-agent-runtime = { workspace = true }
amplifier-module-session-store = { path = "../amplifier-module-session-store" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
tempfile = "3"
