[package]
name = "amplifier-module-tool-filesystem"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Vault-root-scoped filesystem tools for the Amplifier agent framework"

[dependencies]
amplifier-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
glob = "0.3"
regex = "1"
walkdir = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
