[package]
name = "amplifier-module-tool-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Vault-root-scoped filesystem tools (Read, Write, Edit, Glob) for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "tool", "filesystem"]
categories = ["filesystem", "asynchronous"]
documentation = "https://docs.rs/amplifier-module-tool-filesystem"

[dependencies]
amplifier-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
glob = "0.3"
regex = "1"
walkdir = "2"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
