[package]
name = "amplifier-module-tool-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Vault-root-scoped grep/find search tool for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "tool", "search"]
categories = ["filesystem", "asynchronous"]
documentation = "https://docs.rs/amplifier-module-tool-search"

[dependencies]
amplifier-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
regex = "1"
walkdir = "2"
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
