[package]
name = "amplifier-module-tool-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
amplifier-core = { workspace = true }
amplifier-module-tool-task = { path = "../amplifier-module-tool-task" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
