[package]
name = "amplifier-module-tool-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
amplifier-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true }
log = "0.4"

[dev-dependencies]
tokio = { workspace = true }
