[package]
name = "amplifier-module-tool-todo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Persistent todo-list tool for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "tool", "todo"]
categories = ["asynchronous"]
documentation = "https://docs.rs/amplifier-module-tool-todo"

[dependencies]
amplifier-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
log = "0.4"

[dev-dependencies]
tokio = { workspace = true }
