[package]
name = "amplifier-module-tool-web"
version = "0.1.0"
edition = "2021"

[dependencies]
amplifier-core = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"
urlencoding = "2"
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
