[package]
name = "amplifier-module-tool-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Web fetch and search tools for the Amplifier agent framework"
readme = "README.md"
keywords = ["amplifier", "ai", "agent", "tool", "web"]
categories = ["web-programming::http-client", "asynchronous"]
documentation = "https://docs.rs/amplifier-module-tool-web"

[dependencies]
amplifier-core = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = "1"
url = "2"
urlencoding = "2"
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
